--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 .idea/*
 .idea/vcs.xml
 
- weui/weui-demo/.idea/*
- weui/weui-demo/node_modules/*
-
+./weui/weui-demo/.idea
+weui/weui-demo/node_modules/
+weui/weui_demo/package-lock.json
