--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 .idea/vcs.xml
 
 weui/weui-demo/.idea
-weui/weui-demo/node_modules/
+weui/weui-demo/node_modules/*
 weui/weui_demo/package-lock.json
