--- a/weui/weui_demo/package.json
+++ b/weui/weui_demo/package.json
@@ -17,6 +17,7 @@
     "gulp-header": "^1.8.9",
     "gulp-less": "^3.3.2",
     "gulp-postcss": "^7.0.0",
+    "gulp-rename": "^1.2.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-discard-comments": "^2.0.4",
     "yargs": "^9.0.1"
